--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -40,6 +40,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.wdk</groupId>
             <artifactId>internal-common</artifactId>
             <version>1.0-SNAPSHOT</version>
