service-passenger-user注册到nacos中

--- a/service-passenger-user/pom.xml
+++ b/service-passenger-user/pom.xml
@@ -38,6 +38,11 @@
             <version>8.0.28</version>
         </dependency>
 
+        <!-- Nacos -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
     </dependencies>
 
