service-map 项目创建

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>api-passenger</module>
         <module>internal-common</module>
         <module>service-passenger-user</module>
+        <module>service-map</module>
+        <module>service-price</module>
     </modules>
 
     <properties>
