service-price 调用 service-map

--- a/service-map/src/main/resources/application.yml
+++ b/service-map/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 8085
 
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: service-map
+
 amap:
   key: 16d0b794a60ca44a33bb49bb55541dc0
 
