--- a/service-price/src/main/resources/application.yml
+++ b/service-price/src/main/resources/application.yml
@@ -2,10 +2,17 @@ server:
   port: 8084
 
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/service-passenger-user?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: 123456
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
   application:
     name: service-price
+
+
 
