--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>service-map</module>
         <module>service-price</module>
         <module>service-driver-user</module>
+        <module>api-boss</module>
     </modules>
 
     <properties>
