--- a/api-boss/pom.xml
+++ b/api-boss/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!-- nacos 依赖 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
