--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>service-price</module>
         <module>service-driver-user</module>
         <module>api-boss</module>
+        <module>api-driver</module>
     </modules>
 
     <properties>
