--- a/service-driver-user/pom.xml
+++ b/service-driver-user/pom.xml
@@ -36,6 +36,19 @@
         </dependency>
 
 
+        <!-- 引入自动生成代码的 jar 包 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
+
     </dependencies>
 
 </project>
